Bug 390780 - Loading combined fragments from xmi file adds unwanted else part
Summary: Loading combined fragments from xmi file adds unwanted else part
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.24.1 (KDE Applications 17.12.1)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-20 13:12 UTC by Ralf Habacker
Modified: 2018-02-20 13:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.24.3 (KDE Applications 17.12.3)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-02-20 13:12:12 UTC
In case an alternate combined fragment has been created in a sequence diagram and the "else" part has been removed, it will be readded after a file save/load cycle resulting into "auto" modified diagrams having an unwanted "else" part.

How to reproduce: 
1. start umbrello
2. Add an alternate combined fragment widget to a sequence diagram with the default first alternative name
3. remove the "else part"
4. save the file
5. load the file

What happens ?
The else part has been readded to the diagram and will be saved on further saves modified the diagram in an unwanted way

What is expected ?
The else part should not be added by default on file loading
Comment 1 Ralf Habacker 2018-02-20 13:31:00 UTC
Git commit 4000ba1327de96091ca3ffd9df2611eca235ce91 by Ralf Habacker.
Committed on 20/02/2018 at 13:30.
Pushed by habacker into branch 'Applications/17.12'.

Fix 'Loading combined fragments from xmi file adds unwanted else part'

Only add an FloatingDashLineWidget instance if the widget has not been
created in the loading state.
FIXED-IN:2.24.3 (KDE Applications 17.12.3)

M  +2    -1    umbrello/umlwidgets/combinedfragmentwidget.cpp

https://commits.kde.org/umbrello/4000ba1327de96091ca3ffd9df2611eca235ce91