Fix 'Loading combined fragments from xmi file adds unwanted else part'

Only add an FloatingDashLineWidget instance if the widget has not been
created in the loading state.

BUG:390780
FIXED-IN:2.24.3 (KDE Applications 17.12.3)